--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -41,6 +39,9 @@ dependencies:
   syncfusion_flutter_calendar: ^19.1.58
   cloud_firestore: ^1.0.7
   firebase_database: ^6.1.2
+  flutter_speed_dial: ^4.3.0
+  http:
+
 
 
 
